# wasm-snip

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl
.github/: dependabot.yml
src/: lib.rs
tests/: README.md  expected.wasm  hello.rs  hello.wasm  kept_me.wasm  kept_me_too.wasm  no_alloc.wasm  no_alloc_expected.wasm  no_fmt.wasm  no_fmt_expected.wasm  no_panicking.wasm  no_panicking_expected.wasm  snip_me.wasm  tests.rs
