[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["wasm"]
description = "Replace a wasm function with an `unreachable`."
keywords = [
    "symbol",
    "webassembly",
    "snip",
    "size",
    "profiling",
]
license = "Apache-2.0/MIT"
name = "wasm-snip"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-snip"
version = "0.1.3"

[[bin]]
doc = false
name = "wasm-snip"
path = "src/bin/wasm-snip.rs"
required-features = ["exe"]

[dependencies]
failure = "0.1.1"
parity-wasm = "0.32.0"
regex = "1.0.1"

[dependencies.clap]
optional = true
version = "2.29.0"

[features]
default = ["exe"]
exe = ["clap"]
