[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "The Rust and WebAssembly Working Group"]
categories = ["wasm"]
description = "Replace a wasm function with an `unreachable`."
edition = "2018"
keywords = [
    "symbol",
    "webassembly",
    "snip",
    "size",
    "profiling",
]
license = "Apache-2.0/MIT"
name = "wasm-snip"
readme = "./README.md"
repository = "https://github.com/rustwasm/wasm-snip"
version = "0.4.0"

[[bin]]
doc = false
name = "wasm-snip"
path = "src/bin/wasm-snip.rs"
required-features = ["exe"]

[dependencies]
failure = "0.1.5"
walrus = { version = "0.12.0", features = ["parallel"] }
regex = "1.3.1"
rayon = "1.2.0"

[dependencies.clap]
optional = true
version = "2.33.0"

[features]
default = ["exe"]
exe = ["clap"]

[dev-dependencies]
assert_cmd = "1.0.0"
